# api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  fly.toml  gunicorn_config.py  pyproject.toml  run.py
app/: __init__.py  db.py  models.py  routes.py
migrations/versions/: ae1512ad27f1_create_wallet_links_table.py
script/: eth_amount.py
static/drop/: mapped_nema_airdrop.csv  mapped_nema_airdrop_35.csv  sol_eth_wallet.csv  wallets.csv
