[project]
name = "api"
version = "0.1.0"
description = ""
authors = [{ name = "noshynosh", email = "noah@nema.ac" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = ["flask (>=3.1.0,<4.0.0)", "gunicorn (>=23.0.0,<24.0.0)", "flask-cors (>=5.0.0,<6.0.0)", "solana (>=0.36.6,<0.37.0)", "pynacl (>=1.5.0,<2.0.0)", "flask-sqlalchemy (>=3.1.1,<4.0.0)", "flask-migrate (>=4.1.0,<5.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
