[tool.poetry]
    authors = [
        "noshynosh <noah@nema.ac>",
    ]
    description = ""
    name = "api"
    packages = [
        { include = "app" },
    ]
    readme = "README.md"
    version = "0.1.0"

    [tool.poetry.dependencies]
        flask = ">=3.1.0,<4.0.0"
        flask-cors = ">=5.0.0,<6.0.0"
        gunicorn = ">=23.0.0,<24.0.0"
        python = ">=3.13,<4.0"
        solders = ">=0.26.0,<0.27.0"

[build-system]
    build-backend = "poetry.core.masonry.api"
    requires = [
        "poetry-core>=2.0.0,<3.0.0",
    ]
